## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

gnusim8085_pixmapsdir = @PACKAGE_PIXMAPS_DIR@

gnusim8085_pixmaps_DATA = \
	gnusim8085.svg

EXTRA_DIST = $(gnusim8085_pixmaps_DATA)
