## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES = \
	$(GNOME_CFLAGS)

gnusim8085_CFLAGS =\
	 -Wall\
	 -O1\
	 -g

gnusim8085_CXXFLAGS =\
	 -Wall\
	 -O1\
	 -g

bin_PROGRAMS = gnusim8085

gnusim8085_SOURCES = \
	callbacks.c\
	interface.c\
	main.c\
	support.c\
	callbacks.h\
	interface.h\
	support.h\
	8085.c\
	8085-instructions.c\
	8085-memblock.c\
	asm-ds-symtable.c\
	asm-err-comm.c\
	asm-source.c\
	asm-token.c\
	asm-id.c\
	asm-gensym.c\
	asm-genobj.c\
	8085-asm.c\
	gui-app.c\
	gui-editor.c\
	scintilla-interface.cc\
	scintilla-marshal.c\
	8085-link.c\
	gui-view.c\
	bridge.c\
	gui-list-message.c\
	gui-list-data.c\
	asm-listing.c\
	file-op.c\
	gui-list-stack.c\
	AutoComplete.cxx\
	CallTip.cxx\
	CellBuffer.cxx\
	ContractionState.cxx\
	Document.cxx\
	DocumentAccessor.cxx\
	Editor.cxx\
	ExternalLexer.cxx\
	Indicator.cxx\
	KeyMap.cxx\
	KeyWords.cxx\
	LexAsm.cxx\
	LineMarker.cxx\
	PropSet.cxx\
	RESearch.cxx\
	ScintillaBase.cxx\
	Style.cxx\
	StyleContext.cxx\
	UniConversion.cxx\
	ViewStyle.cxx\
	WindowAccessor.cxx\
	XPM.cxx\
	PlatGTK.cxx\
	ScintillaGTK.cxx\
	8085-asm.h\
	8085-instructions.h\
	8085-link.h\
	8085-memblock.h\
	8085.h\
	Accessor.h\
	AutoComplete.h\
	CallTip.h\
	CellBuffer.h\
	Converter.h\
	ContractionState.h\
	Document.h\
	DocumentAccessor.h\
	Editor.h\
	ExternalLexer.h\
	Indicator.h\
	KeyMap.h\
	KeyWords.h\
	LineMarker.h\
	Platform.h\
	PropSet.h\
	RESearch.h\
	SString.h\
	SVector.h\
	SciLexer.h\
	Scintilla.h\
	ScintillaBase.h\
	ScintillaWidget.h\
	Style.h\
	StyleContext.h\
	UniConversion.h\
	ViewStyle.h\
	WindowAccessor.h\
	XPM.h\
	asm-ds-limits.h\
	asm-ds-symtable.h\
	asm-err-comm.h\
	asm-genobj.h\
	asm-gensym.h\
	asm-id.h\
	asm-listing.h\
	asm-source.h\
	asm-token.h\
	bridge.h\
	file-op.h\
	gui-app.h\
	gui-editor.h\
	gui-list-data.h\
	gui-list-message.h\
	gui-list-stack.h\
	gui-view.h\
	scintilla-interface.h\
	scintilla-marshal.h\
	support-common.h\
	gui-keypad.h\
	gui-keypad.c\
	gui-input-symbol.h\
	gui-input-symbol.c\
	asm-id-info.h\
	asm-id-info.c

gnusim8085_LDFLAGS = 

gnusim8085_LDADD =  \
	$(GNOME_LIBS)
